--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -66,6 +66,11 @@ body{
         .row-3{
             grid-row: 3/5;
         }
+
+        .card-temporary{
+            display: block;
+            width: 500px;
+        }
     }
 
     
